# FFPlayer

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/player/binny/ffplayer/: FFApp.java  MainActivity.java
app/src/main/java/com/player/binny/ffplayer/util/: FFUtils.java
app/src/main/java/com/player/binny/ffplayer/view/: FFVideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
